# verify-suite

./: .gitignore  ARCHITECTURE.md  CASE-STUDY.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: README.md  run_demo.sh
demo/sample-output/: README.md  verify-suite-audit.jsonl  verify-suite-receipt.json  verify-suite-report.md
demo/sample_app/: README.md  model_loader.py  tasksorter.py  truth.yaml
demo/sample_app/docs/: design.md
src/verify_suite/: __init__.py  cli.py  core.py  registry.py  report.py  seal.py
tests/: test_core.py  test_seal_and_report.py
